minor scrollbar fixes
Hide page scrollbar when rendering using phantomjs.
Hide baron scrollbar when rendering using phantomjs.

--- a/public/sass/components/_scrollbar.scss
+++ b/public/sass/components/_scrollbar.scss
@@ -276,6 +276,11 @@
   opacity: 0.9;
 }
 
+// fix for phantomjs
+.body--phantomjs .baron__track .baron__bar {
+  opacity: 0 !important;
+}
+
 .baron__control {
   display: none;
 }
